Sort of works.  Crashes when trying to do anything with the database.  Remove method has not been implemented yet.  Will still need to be able to generate Goals based on dates and deadlines.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="title_activity_test">Test</string>
+    <string name="daily_goals">Daily Goals</string>
+    <string name="add_a_goal">Add a Goal</string>
+    <string name="go_to_weekly_goals">Go to Weekly Goals</string>
 </resources>
